modify env template

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,10 @@ AMQP_HOST='localhost'
 AMQP_USER='user'
 AMQP_PSWD='pswd'
 AMQP_PORT='5672'
+
+# Database
+DB_HOST='localhost'
+DB_USER='postgres'
+DB_PSWD='postgrespw'
+DB_NAME='db-name'
+DB_PORT='5432'
